Change anestbook policy

--- a/content/anestbook/2025-10-09-policy.md
+++ b/content/anestbook/2025-10-09-policy.md
@@ -1,8 +1,8 @@
 +++
 date = '2025-10-09T23:16:45-03:00'
-draft = true
+draft = false
 title = 'App Policy'
-url = 'anestbook/policy'
+url = 'anestbook/oldpolicy'
 +++
 
 # Privacy Policy for Anesthesia Handbook
